# TorchAccelerator

./: LICENSE  README.md  setup.cfg
tests/: benchmark.py  benchmark_midas.py  benchmark_segm.py
torch_accelerator/: __init__.py
