[metadata]
# replace with your username:
name = torch_accelerator
version = 0.0.1
author = sid1057
author_email = ivanov.dale@gmail.com
description = Easy to use package for accelerate your pytorch model inference
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sid1057/TorchAccelerator
project_urls =
    Bug Tracker = https://github.com/Sid1057/TorchAccelerator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6